--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="child1 box">1</div>
+        <div class="child2 box">2</div>
+        <div class="child3 box">3</div>
+    </div>
 </body>
 </html>
