--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="child1 box">1</div>
         <div class="child2 box">2</div>
         <div class="child3 box">3</div>
-        <div class="child4 box">1</div>
+        <!-- <div class="child4 box">1</div>
         <div class="child5 box">2</div>
         <div class="child6 box">3</div>
         <div class="child7 box">1</div>
@@ -22,7 +22,7 @@
         <div class="child12 box">3</div>
         <div class="child13 box">2</div>
         <div class="child14 box">3</div>
-        <div class="child15 box">3</div>
+        <div class="child15 box">3</div> -->
     </div>
 </body>
 </html>
